Edit code structure

--- a/color.html
+++ b/color.html
@@ -49,7 +49,7 @@
   </div>
 
   <div class="nav-buttons tone">
-    <h4 class="tone-text grey-text text-lighten-1">TEXT</h4>
+    <h4 class="tone-text grey-text text-lighten-1"></h4>
   </div>
 
   <div class="nav-buttons arrow previous valign-wrapper">
