--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <!-- CSS -->
   <!-- Import Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Libre+Franklin|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <!-- JavaScript -->
   <!-- Import jQuery -->
