--- a/color.html
+++ b/color.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Colorful</title>
+  <title>Undertone | Colored Poetry</title>
   <!-- Import Google Icon Font -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- CSS -->
