--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Poetry Project</title>
+  <title>Undertone | Colored Poetry</title>
   <!-- Import Google Icon Font -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- CSS -->
@@ -49,14 +49,14 @@
   </header>
   <main>
     <div class="container center-align">
-      <h1 class="section grey-text text-lighten-4">Poetry in Color</h1>
-      <h5 class="grey-text text-lighten-3">analyze poems for a variety of tones to uniquely liven the prose's presentation</h5>
+      <h1 class="section grey-text text-lighten-5">Poetry in Color</h1>
+      <h5 class="grey-text text-lighten-4">analyze tones in poetry to uniquely liven the presentation of prose</h5>
       <div class="row section" id="no-row-bottom-spacing">
         <div class="col s12 m4">
           <div class="card emotion-card blue-grey darken-2">
             <div class="card-content white-text">
               <span class="card-title red-text text-lighten-3">Anger</span>
-              <p>a strong feeling of annoyance, displeasure, or hostility</p>
+              <p>a strong feeling of displeasure, annoyance, or belligerence aroused by a wrong</p>
             </div>
           </div> <!-- end card -->
         </div> <!-- end column -->
@@ -64,7 +64,7 @@
           <div class="card emotion-card blue-grey darken-2">
             <div class="card-content white-text">
               <span class="card-title deep-purple-text text-lighten-3">Disgust</span>
-              <p>a feeling of revulsion or profound disapproval aroused by something unpleasant</p>
+              <p>a feeling of revulsion or profound disapproval caused by something unpleasant</p>
             </div>
           </div> <!-- end card -->
         </div> <!-- end column -->
@@ -82,7 +82,7 @@
           <div class="card emotion-card blue-grey darken-2">
             <div class="card-content white-text">
               <span class="card-title yellow-text text-lighten-3">Joy</span>
-              <p>great delight or happiness caused by something exceptionally good or satisfying</p>
+              <p>a sense of delight or happiness caused by something exceptionally good or satisfying</p>
             </div>
           </div> <!-- end card -->
         </div> <!-- end column -->
@@ -90,7 +90,7 @@
           <div class="card emotion-card blue-grey darken-2">
             <div class="card-content white-text">
               <span class="card-title blue-text text-lighten-3">Sadness</span>
-              <p>affected by unhappiness or grief</p>
+              <p>a condition of grief or unhappiness, expressing a somber atmosphere</p>
             </div>
           </div> <!-- end card -->
         </div> <!-- end column -->
@@ -104,17 +104,17 @@
     <div class="blue-grey center-align">
       <div class="section">
         <h4 class="grey-text text-lighten-3">Analyze a Random Poem</h4>
-        <p class="grey-text text-darken-4">Poets include Shakespeare, John Donne, Emily Dickinson...</p>
+        <p class="grey-text text-darken-4">Randomly select a poem from the database</p>
         <a class="waves-effect waves-light btn-large rounded-corners red lighten-1 random"><i class="material-icons left">shuffle</i> Random Poem</a>
       </div> <!-- end section -->
       <div class="section">
         <h4 class="grey-text text-lighten-3">Search for a Specific Poem</h4>
-        <p class="grey-text text-darken-4">Filter by poet, title, length, or a combination of the former</p>
+        <p class="grey-text text-darken-4">Filter search by poet, title, or a combination</p>
         <a href="#searchModal" class="waves-effect waves-light btn-large rounded-corners red lighten-1 search"><i class="material-icons left">search</i> Begin Search</a>
       </div> <!-- end section -->
       <div class="section bottom-padding">
         <h4 class="grey-text text-lighten-3">Enter Your Own Poem</h4>
-        <p class="grey-text text-darken-4">Analyze custom text that is 1000 (placeholder) characters or less</p>
+        <p class="grey-text text-darken-4">Provide custom text for analysis</p>
         <a href="#customModal" class="waves-effect waves-light btn-large rounded-corners red lighten-1 custom"><i class="material-icons left">input</i> Enter Text</a>
       </div> <!-- end section -->
     </div> <!-- end blue-grey div -->
@@ -159,7 +159,7 @@
           <label for="title">Title</label>
         </div>
         <h6 class="center grey-text text-darken-3">
-          Sort through poems by poet, title, length, or a combination of the former criteria.
+          Sort through poems by poet, title, or a combination of the former criteria.
           <br>
         </h6>
       </div> <!-- end modal content -->
