Add message for error during poem analysis

--- a/color.html
+++ b/color.html
@@ -44,6 +44,8 @@
 
   <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
 
+  <h1 class="red-text text-lighten-2 center-element hide" id="error">Try a Different Poem</h1>
+
   <div class="nav-buttons close-button">
     <a href="index.html"><i class="material-icons white-text close-text">close</i></a>
   </div>
