--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </h6>
       </div> <!-- end modal content -->
       <div class="modal-footer">
-        <button data-target="poemModal" disabled class="poems btn" id="searchPoems">Search</button>
+        <button data-target="poemModal" disabled class="poems btn red lighten-2 btn-flat" id="searchPoems">Search</button>
       </div> <!-- end modal footer -->
     </form>
   </div> <!-- end modal -->
@@ -200,13 +200,13 @@
       <h3>Enter custom text</h3>
       <br>
       <div class="input-field col s12"> <!-- custom text input -->
-        <textarea id="customText" class="materialize-textarea" length="2000" placeholder="Enter custom text less than 1000 characters.
+        <textarea id="customText" class="materialize-textarea" length="2000" placeholder="Enter custom text less than 2000 characters.
 Stanzas should be separated by blank lines." wrap="hard"></textarea>
         <label for="customText">Custom Text</label>
       </div>
     </div> <!-- end modal content -->
     <div class="modal-footer">
-      <button disabled class="btn red lighten-2 btn-flat" id="customTextSubmit">Search</button>
+      <button disabled class="btn red lighten-2 btn-flat" id="customTextSubmit">Submit</button>
     </div> <!-- end modal footer -->
   </div> <!-- end modal -->
 </body>
