--- a/color.html
+++ b/color.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Undertone | Colored Poetry</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <!-- Import Google Icon Font -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- CSS -->
