--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Undertone | Colored Poetry</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <!-- Import Google Icon Font -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- CSS -->
@@ -200,7 +201,7 @@
       <h3>Enter custom text</h3>
       <br>
       <div class="input-field col s12"> <!-- custom text input -->
-        <textarea id="customText" class="materialize-textarea" length="2000" placeholder="Enter custom text less than 2000 characters.
+        <textarea id="customText" class="materialize-textarea" length="5000" placeholder="Enter custom text less than 5000 characters.
 Stanzas should be separated by blank lines." wrap="hard"></textarea>
         <label for="customText">Custom Text</label>
       </div>
