--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <!-- MODALS -->
   <!-- poem search modal -->
   <div id="searchModal" class="modal">
-    <form action="" name="poems" method="post">
+    <form name="poems" method="post">
       <div class="modal-content blue-grey lighten-5">
         <h3 class="grey-text text-darken-3">Search for Poems</h3>
         <div class="input-field"> <!-- Poet -->
@@ -201,8 +201,7 @@
       <h3>Enter custom text</h3>
       <br>
       <div class="input-field col s12"> <!-- custom text input -->
-        <textarea id="customText" class="materialize-textarea" length="5000" placeholder="Enter custom text less than 5000 characters.
-Stanzas should be separated by blank lines." wrap="hard"></textarea>
+        <textarea id="customText" class="materialize-textarea" cols="50" length="5000" placeholder="Enter custom text less than 5000 characters. Stanzas should be separated by blank lines." wrap="hard"></textarea>
         <label for="customText">Custom Text</label>
       </div>
     </div> <!-- end modal content -->
